# TerraForge-Studio

./: .dockerignore  .env.example  .gitignore  API_EXAMPLES.md  BUGFIXES_GENERATION.md  BUILD.md  CHANGELOG.md  CHANGELOG_v4.0.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE_v4.0.md  DESKTOP_BUILD_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  FINAL_REPORT.md  FIXES_APPLIED.md  GITHUB_ACTIONS_GUIDE.md  INSTALLATION.md  INTEGRATION_GUIDE.md  LICENSE  MULTIPLATFORM_BUILD_GUIDE.md  OLLAMA_SETUP.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  QUICK_START_DESKTOP.md  README.md  README.ru.md  README_DESKTOP.md  README_DEVELOPMENT_v3-v4.md  README_v4.0.md  ROADMAP_COMPLETE.md  SETUP.md  START_HERE.md  START_v4.0.md  TRANSFORMATION_SUMMARY.md  UPDATE_SUMMARY.md  WINDOWS_SETUP.md  build.ps1  build.sh  buildozer.spec  (+19 more)
.github/workflows/: build-multiplatform.yml  build-release.yml  ci.yml
cli/: terraforge.py
desktop/: INSTALL_INSTRUCTIONS.md  NEXT_STEPS.md  README.md  RELEASE_CHECKLIST.md  auto_update.py  build.bat  build.ps1  build.py  build_all.bat  build_all.ps1  build_all.py  build_android.sh  build_linux.sh  build_macos.sh  desktop_requirements.txt  install_deps.bat  install_deps.ps1  installer.iss  launcher.py  launcher_gui.py  terraforge.spec  test_app.ps1  test_launcher.py
desktop/hooks/: hook-uvicorn.py
docs/: AI_INTEGRATION.md  ANDROID_BUILD.md  ANDROID_FULL_FEATURES.md  API_SPECIFICATION.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  EXPORTERS_GUIDE.md  FEATURES.md  INSTALLATION.md  QUICK_START.md  README.md  ROADMAP_v4.x.md  RUN_INSTRUCTIONS.md  SETTINGS_GUIDE.md  USER_GUIDE.md
frontend/: app.js  index.html  style.css
frontend-new/: .env.example  .env.production  .eslintrc.json  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend-new/e2e/: app.spec.ts
frontend-new/public/: manifest.json
frontend-new/scripts/: generate-icons.js
frontend-new/src/: App.tsx  main.tsx  vite-env.d.ts
frontend-new/src-tauri/: tauri.conf.json
k8s/: deployment.yml
realworldmapgen/: __init__.py  config.py  generator.py  models.py
realworldmapgen/ai/: __init__.py  ollama_client.py  qwen_coder_ollama.py  qwen_vision_ollama.py  terrain_analyzer.py  terrain_classifier.py
realworldmapgen/api/: __init__.py  ai_routes.py  auth_routes.py  batch_routes.py  cache_routes.py  cloud_routes.py  health.py  main.py  plugin_routes.py  settings_routes.py  share_routes.py  webhook_routes.py  websocket_routes.py
realworldmapgen/core/: __init__.py  auth_manager.py  cache_manager.py  cloud_storage.py  data_retention.py  plugin_system.py  queue_manager.py  quotas.py  rbac.py  scheduler.py  sso.py  terrain_generator.py  thumbnail_generator.py
realworldmapgen/elevation/: __init__.py  heightmap_generator.py
realworldmapgen/exporters/: __init__.py  base.py  beamng_exporter.py  unity_exporter.py  unreal_exporter.py
realworldmapgen/imagery/: __init__.py  imagery_downloader.py
realworldmapgen/incremental/: __init__.py  update_manager.py
realworldmapgen/middleware/: rate_limiter.py
tests/: README.md  conftest.py  test_api_integration.py  test_frontend.py
(+141 files in other folders)
