[tool.poetry]
name = "realworldmapgen-bng"
version = "0.1.0"
description = "AI-powered real-world map generator for BeamNG.drive with automated infrastructure generation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "realworldmapgen"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
requests = "^2.32.0"
numpy = "^2.1.0"
pillow = "^11.0.0"
shapely = "^2.0.6"
geopandas = "^1.0.1"
osmnx = "^2.0.0"
ollama = "^0.4.0"
aiofiles = "^24.1.0"
python-multipart = "^0.0.17"
rasterio = "^1.4.2"
elevation = "^1.1.3"
pyproj = "^3.7.0"
networkx = "^3.4.0"
matplotlib = "^3.9.0"
scipy = "^1.14.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
